--- a/app/globals.css
+++ b/app/globals.css
@@ -143,6 +143,8 @@ Variables
  
   /* primary/main color */
   --clr-primary-3: #efb209;
+  --clr-primary-4: #c69f03;
+  --clr-primary-5: #f6cd5e;
   /* lighter shades of primary color */
 
   /* darkest grey - used for headings */
